--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
 				<div class="timeline" data-aos="fade-down" data-aos-delay="300">
 					<ul>
-						<li class="date" data-date="2015 - Present">
+						<li class="date" data-date="2015">
 								<h1>Bachelor</h1>
 								<p>
 									I'm finished Nation Military University "Vasil Levski"
@@ -196,7 +196,7 @@
 						<li class="date" data-date="2018">
 								<h1>I started C#,JavaScript learn</h1>
 								<p>
-									But for now I have focused on JavaScript,HTML,CSS,React.C# for now, it remains a bit in the background.
+									But for now I have focused on JavaScript,HTML,CSS,React. C# for now, it remains a bit in the background.
 								</p>
 						</li>
 						<li class="date" data-date="2019">
